--- a/Tests/IntegrationTests.XamarinAndroid/IntegrationTests.XamarinAndroid.csproj
+++ b/Tests/IntegrationTests.XamarinAndroid/IntegrationTests.XamarinAndroid.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
     <Reference Include="Xamarin.Android.NUnitLite" />
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
